PE Creation batch update

--- a/force-app/main/default/classes/Batch_CreateParticipants.cls
+++ b/force-app/main/default/classes/Batch_CreateParticipants.cls
@@ -2,28 +2,35 @@
  * Created by Denis Z on 16-Jul-19.
  */
 
-public without sharing class Batch_CreateParticipants implements Database.Batchable<ImportPatientsCSV.Patient>{
+public without sharing class Batch_CreateParticipants implements Database.Batchable<String>, Database.Stateful{
+    
+    private List<Id> createdPEIds = new List<Id>();
+    private Integer scopeSize;
+    private String postfix;
 
-    public List<ImportPatientsCSV.Patient> patients {get;set;}
-
-    public Batch_CreateParticipants(List<ImportPatientsCSV.Patient> patients){
-        this.patients = patients;
+    public Batch_CreateParticipants(Integer scopeSize, String postfix){
+        this.scopeSize = scopeSize;
+        this.postfix = postfix;
     }
 
-    public Iterable<ImportPatientsCSV.Patient> start(Database.BatchableContext bc){
-        return patients;
+    public Iterable<String> start(Database.BatchableContext bc){
+        StaticResource sr = [SELECT Id, Body FROM StaticResource WHERE Name = 'PECreationData'];
+        List<String> dataLines = new List<String>();
+        dataLines = sr.Body.toString().split('\n');
+        List<String> resList = new List<String>();
+        for (Integer i = 1; i < dataLines.size(); i++) resList.add(dataLines[i]);
+        return resList;
     }
 
-    public void execute(Database.BatchableContext bc, List<ImportPatientsCSV.Patient> scope){
-        if(!scope.isEmpty()){
-            ParticipantEnrollmentFactory.createParticipantEnrollmentRecords(scope[0].protocolId, scope[0].siteNumber, scope[0].screeningId);
-        }
+    public void execute(Database.BatchableContext bc, List<String> scope){
+       createdPEIds.addAll(ParticipantEnrollmentFactory.createParticipantEnrollmentRecords(scope, postfix));
     }
 
     public void finish(Database.BatchableContext bc){
+        Database.executeBatch(new Batch_PEToPSE(createdPEIds), scopeSize);
     }
 
-    public static void run(List<ImportPatientsCSV.Patient> patients){
-        Database.executeBatch(new Batch_CreateParticipants(patients), 1);
+    public static void run(Integer scopeSize, String postfix){
+        Database.executeBatch(new Batch_CreateParticipants(scopeSize, postfix), scopeSize);
     }
 }
