--- a/force-app/main/default/classes/ParticipantEnrollmentFactory.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentFactory.cls
@@ -4,41 +4,72 @@
 
 public without sharing class ParticipantEnrollmentFactory {
 
-    //1st Study_ID__c/ClinicaТl_Trial_Profile__r.Protocol_ID__c
-    //2nd Study_Site__r.Study_Site_Number__c
-    //3rd Screening ID - startValue, endValue
+    public class PEWrapper{
+        public Participant_Enrollment__c pe;
+        public Participant__c participant;
+        
+        public PEWrapper(Participant__c participant, Participant_Enrollment__c pe){
+            this.participant = participant;
+            this.pe = pe;
+        }
+    }
+    
+    public static Map<String, Clinical_Trial_Profile__c> ctpMap = new Map<String, Clinical_Trial_Profile__c>();
+    public static Map<String, Study_Site__c> ssMap = new Map<String, Study_Site__c>();
+    public static Id TA_ID = [SElECT Id FROM Therapeutic_Area__c LIMIT 1].Id;
+    
 
-    public static void createParticipantEnrollmentRecords(String protocolId, String siteNumber, String screeningId){
-        Clinical_Trial_Profile__c ctp = getClinicalTrialProfile(protocolId);
-        createParticipantEnrollment(ctp, getStudySite(siteNumber, ctp), screeningId);
+    public static List<Id> createParticipantEnrollmentRecords(List<String> csvLines, String postfix){
+        if(postfix == null) postfix = '';
+        List<PEWrapper> peWrappers = new List<PEWrapper>();
+        for(String csvLine : csvLines){
+            List<String> lineItems = csvLine.split('~');
+            String protocolId = lineItems[0];
+            String siteNumber = lineItems[1];
+            String screeningId = lineItems[2];
+            Clinical_Trial_Profile__c ctp = getClinicalTrialProfile(protocolId + postfix);
+            peWrappers.add(
+                    createPEWrapper(ctp, getStudySite(siteNumber + postfix, ctp), screeningId + postfix)
+            );
+        }
+        List<Participant__c> participants = new List<Participant__c>();
+        for(PEWrapper peWrapper : peWrappers) participants.add(peWrapper.participant);
+        insert participants;
+        List<Participant_Enrollment__c> peList = new List<Participant_Enrollment__c>();
+        for(PEWrapper peWrapper : peWrappers){
+            peWrapper.pe.Participant__c = peWrapper.participant.Id;
+            peList.add(peWrapper.pe);
+        }
+        insert peList;
+        List<Id> peIds = new List<Id>();
+        for(Participant_Enrollment__c pe : peList) peIds.add(pe.Id);
+        return peIds;
     }
 
-    private static void createParticipantEnrollment(Clinical_Trial_Profile__c ctp, Study_Site__c studySite, String screeningId){
-        Participant__c participant = new Participant__c();
-        participant.Mailing_Country_Code__c = 'US';
-        participant.Mailing_Country__c = 'United States';
-        participant.Email__c = 'dz@hp.com';
-        participant.First_Name__c = screeningId;
-        participant.Last_Name__c = screeningId;
-        insert participant;
-        Participant_Enrollment__c pe = new Participant_Enrollment__c();
-        pe.Clinical_Trial_Profile__c = ctp.Id;
-        pe.Study_Site__c = studySite.Id;
-        pe.Screening_ID__c = screeningId;
-        pe.Participant__c = participant.Id;
-        pe.Participant_Status__c  = 'Referral Sent to PI';
-        insert pe;
-        Participant_Study_Enrollment__c pse = new Participant_Study_Enrollment__c();
-        pse.Clinical_Trial_Profile__c = ctp.Id;
-        pse.Study_Site__c = studySite.Id;
-        pse.Screening_ID__c = screeningId;
-        pse.Status__c = 'Enrolled';
-        pse.Participant_Enrollment__c = pe.Id;
-        pse.Participant__c = participant.Id;
-        insert pse;
+    private static PEWrapper createPEWrapper(Clinical_Trial_Profile__c ctp, Study_Site__c studySite, String screeningId){
+        Participant__c participant = new Participant__c(
+                First_Name__c = screeningId,
+                Last_Name__c = screeningId,
+                Phone__c = Datetime.now().getTime() + '',
+                Email__c = screeningId + '@email.com',
+                Mailing_Country_Code__c = 'US',
+                Mailing_State_Code__c = 'AL'
+        );
+        Participant_Enrollment__c pe = new Participant_Enrollment__c(
+                Pre_screening_Status__c = ParticipantEnrollmentService.PES_STATUS_NOT_REQUIRED,
+                Medical_Record_Review_Status__c = ParticipantEnrollmentService.MRR_STATUS_PASS,
+                Study_Site__c = studySite.Id,
+                Patient_ID__c = 'SomePatientId1',
+                //Referral_Source__c = 'HCP',
+                Participant_Status__c = ParticipantEnrollmentService.PART_STATUS_REFERRAL_SENT_TO_PI,
+                Screening_ID__c = screeningId
+        );
+        return new PEWrapper(participant, pe);
     }
 
     private static Clinical_Trial_Profile__c getClinicalTrialProfile(String protocolId){
+        Clinical_Trial_Profile__c ctp = ctpMap.get(protocolId);
+        if(ctp != null) return ctp;
         List<Clinical_Trial_Profile__c> ctpList = [
                 SELECT
                         Id,
@@ -47,20 +78,38 @@ public without sharing class ParticipantEnrollmentFactory {
                 WHERE   Protocol_ID__c = : protocolId
         ];
         if(ctpList.isEmpty()){
-            return createClinicalTrialProfile(protocolId);
+            ctp = createClinicalTrialProfile(protocolId);
+        }else{
+            ctp = ctpList[0];
         }
-        return ctpList[0];
+        ctpMap.put(protocolId, ctp);
+        return ctp;
     }
 
     private static Clinical_Trial_Profile__c createClinicalTrialProfile(String protocolId){
-        Clinical_Trial_Profile__c ctp = new Clinical_Trial_Profile__c();
-        ctp.Protocol_ID__c = protocolId;
-        ctp.Participating_in_Patient_Portal__c = 'Yes';
+        Clinical_Trial_Profile__c ctp = new Clinical_Trial_Profile__c(
+                Protocol_ID__c = protocolId,
+                Override_Recruitment_Status__c = 'Actively Enrolling',
+                NCT_Number__c = generateNCTNumber(),
+                Link_to_Pre_screening__c = 'some link',
+                Study_Title__c = 'Some Title ' + protocolId,
+                Study_Code_Name__c = 'Some Code Name ' + protocolId,
+                Suppress_Participant_Emails__c = false,
+                Therapeutic_Area__c = TA_ID,
+                Participating_in_Digital_Recruitment__c = 'YES',
+                Participating_in_Rocket_Referral__c = 'YES',
+                Participating_in_Patient_Portal__c = 'Yes',
+                Shareback_Settings_On_Participant_Level__c = true,
+                Shareback_Availability_Timing__c = 1,
+                Visit_Data_Shareback__c = true
+        );
         insert ctp;
         return ctp;
     }
 
     private static Study_Site__c getStudySite(String siteNumber, Clinical_Trial_Profile__c ctp){
+        Study_Site__c ss = ssMap.get(siteNumber);
+        if(ss != null) return ss;
         List<Study_Site__c> siteList = [
                 SELECT
                         Id,
@@ -69,17 +118,23 @@ public without sharing class ParticipantEnrollmentFactory {
                 WHERE   Study_Site_Number__c = : siteNumber
         ];
         if(siteList.isEmpty()){
-            return createStudySite(siteNumber, ctp);
+            ss = createStudySite(siteNumber, ctp);
+        }else{
+            ss = siteList[0];
         }
-        return siteList[0];
+        ssMap.put(siteNumber, ss);
+        return ss;
     }
 
     private static Study_Site__c createStudySite(String siteNumber, Clinical_Trial_Profile__c ctp){
-        Study_Site__c study = new Study_Site__c();
-        study.Study_Site_Number__c = siteNumber;
-        study.Site__c = getSite().Id;
-        study.Clinical_Trial_Profile__c = ctp.Id;
-        study.Principal_Investigator__c = createPI().Id;
+        Study_Site__c study = new Study_Site__c(
+                Principal_Investigator__c = createPI().Id,
+                Clinical_Trial_Profile__c = ctp.Id,
+                Override_PI_Referral_Status__c = StudySiteService.PI_S_INVITATION_SENT,
+                Site__c = getSite().Id,
+                Study_Site_Type__c = 'Traditional',
+                Suppress_Participant_Emails__c = false
+        );
         insert study;
         return study;
     }
@@ -111,6 +166,11 @@ public without sharing class ParticipantEnrollmentFactory {
         acc.Name = 'Study';
         insert acc;
         return acc;
+    }
+    
+    private static String generateNCTNumber(){
+        String newNum = '12312323123' + ctpMap.size();
+        return 'NCT' + newNum.right(8);
     }
 
 
