changed billing address to mailing, changed label values

--- a/force-app/main/default/classes/AccountSettingsController.cls
+++ b/force-app/main/default/classes/AccountSettingsController.cls
@@ -155,6 +155,7 @@ public without sharing class AccountSettingsController {
                         LastName,
                         AccountId,
                         Email,
+                        Fax,
                         Phone,
                         MailingAddress,
                         MailingCity,
