--- a/force-app/main/default/classes/AddPatientByPIRemote.cls
+++ b/force-app/main/default/classes/AddPatientByPIRemote.cls
@@ -38,12 +38,49 @@ public without sharing class AddPatientByPIRemote {
     public static FormData getInitData(Id ctpId) {
         try {
             FormData initData = new FormData();
-            initData.ctp = TrialService.getTrial(ctpId);
-            initData.ss =  StudySiteService.getStudySiteForPIByTrialId(ctpId)[0];
+            System.debug('ctpId value:' + ctpId);
+            if(ctpId != null){
+                initData.ctp = TrialService.getTrial(ctpId);
+                initData.ss =  StudySiteService.getStudySiteForPIByTrialId(ctpId)[0];
+            }
             return initData;
         } catch (Exception e) {
             return (FormData) AuraHelper.throwException(e);
         }
+    }
+
+     @AuraEnabled
+    public static FormData getInitDataEdit() {
+        try {
+            FormData initData = new FormData();
+            return initData;
+        } catch (Exception e) {
+            return (FormData) AuraHelper.throwException(e);
+        }
+    }
+
+    @AuraEnabled
+    public static Participant__c getParticipantRecord(Id participantEnrollmentId){
+        System.debug('participantId:' + participantEnrollmentId);
+        Participant_Enrollment__c per = [SELECT Id, Participant__c FROM Participant_Enrollment__c WHERE Id =:participantEnrollmentId ];
+        System.debug('CHECK P' + [SELECT id, Mailing_State_Code__c, Mailing_State__c FROM Participant__c WHERE  Id = :per.Participant__c]);
+        return [
+            SELECT  id,
+                    First_Name__c,
+                    Last_Name__c,
+                    Middle_Name__c,
+                    Date_of_Birth__c,
+                    Gender__c,
+                    Phone__c,
+                    Phone_Type__c,
+                    Email__c,
+                    Mailing_Country_Code__c,
+                    Mailing_State_Code__c,
+                    Mailing_Zip_Postal_Code__c,
+                    Mailing_State__c
+            FROM    Participant__c
+            WHERE   Id = :per.Participant__c
+        ];
     }
     
     @AuraEnabled
