Fixed REF-342, ALM 1117, ALM 1131

--- a/force-app/main/default/classes/AddPatientByPIRemote.cls
+++ b/force-app/main/default/classes/AddPatientByPIRemote.cls
@@ -35,11 +35,21 @@ public class AddPatientByPIRemote {
     }
     
     @AuraEnabled
-    public static FormData getInitData(Id ctpId) {
+    public static FormData getInitData(Id ctpId, Id ssId) {
         try {
             FormData initData = new FormData();
             initData.ctp = TrialService.getTrial(ctpId);
-            initData.ss =  StudySiteService.getStudySiteForPIByTrialId(ctpId)[0];
+            List<Study_Site__c> studySitesByTrial = StudySiteService.getStudySiteForPIByTrialId(ctpId);
+            if(ssId != null){
+                for(Study_Site__c ss : studySitesByTrial) {
+                    if(ss.Id == ssId) {
+                        initData.ss = ss;
+                    }
+                }
+            }
+            else {
+                initData.ss = StudySiteService.getStudySiteForPIByTrialId(ctpId)[0];
+            }
             return initData;
         } catch (Exception e) {
             return (FormData) AuraHelper.throwException(e);
