--- a/force-app/main/default/classes/Test_AddPatientByPIRemote.cls
+++ b/force-app/main/default/classes/Test_AddPatientByPIRemote.cls
@@ -11,7 +11,8 @@ private class Test_AddPatientByPIRemote {
         Test.startTest();
         TestData testData = new TestData();
         System.runAs(testData.piUser){
-            AddPatientByPIRemote.getInitData(testData.ctp.Id);
+            AddPatientByPIRemote.getInitData(testData.ctp.Id,null);
+            AddPatientByPIRemote.getInitData(testData.ctp.Id,testData.ss.Id);
         }
         Test.stopTest();
     }
